@@ -565,35 +565,35 @@
                 </include>
             </itemlayout>
 
-            <itemlayout width="widget_poster_width" height="widget_poster_height" condition="![[String.Contains($PARAM[content],tvGenres) | String.Contains($PARAM[content],movieGenres) | String.Contains($PARAM[content],genres.xml)] | String.Contains($PARAM[content],tvshows/genres) | String.Contains($PARAM[content],studios.xml) | String.Contains($PARAM[content],tvshows/studios) | String.Contains($PARAM[content],years.xml) | String.Contains($PARAM[content],country.xml) | String.Contains($PARAM[content],tags.xml) | String.Contains($PARAM[content],directors.xml) | String.Contains($PARAM[content],special://videoplaylists/)] + String.IsEqual($PARAM[aspect],$LOCALIZE[20021])">
+            <itemlayout width="widget_poster_width" height="widget_poster_height" condition="![[String.Contains($PARAM[content],tvGenres) | String.Contains($PARAM[content],movieGenres) | String.Contains($PARAM[content],genres.xml)] | String.Contains($PARAM[content],studios.xml) | String.Contains($PARAM[content],years.xml) | String.Contains($PARAM[content],country.xml) | String.Contains($PARAM[content],tags.xml) | String.Contains($PARAM[content],directors.xml) | String.Contains($PARAM[content],special://videoplaylists/)] + String.IsEqual($PARAM[aspect],$LOCALIZE[20021])">
                 <include content="Widget_Posters_ItemLayout">
                     <param name="poster" value="true" />
                 </include>
             </itemlayout>
-            <itemlayout width="606.67" height="widget_poster_height" condition="![[String.Contains($PARAM[content],tvGenres) | String.Contains($PARAM[content],movieGenres) | String.Contains($PARAM[content],genres.xml)] | String.Contains($PARAM[content],tvshows/genres) | String.Contains($PARAM[content],studios.xml) | String.Contains($PARAM[content],tvshows/studios) | String.Contains($PARAM[content],years.xml) | String.Contains($PARAM[content],country.xml) | String.Contains($PARAM[content],tags.xml) | String.Contains($PARAM[content],directors.xml) | String.Contains($PARAM[content],special://videoplaylists/)] + String.IsEqual($PARAM[aspect],$LOCALIZE[31038])">
+            <itemlayout width="606.67" height="widget_poster_height" condition="![[String.Contains($PARAM[content],tvGenres) | String.Contains($PARAM[content],movieGenres) | String.Contains($PARAM[content],genres.xml)] | String.Contains($PARAM[content],studios.xml) | String.Contains($PARAM[content],years.xml) | String.Contains($PARAM[content],country.xml) | String.Contains($PARAM[content],tags.xml) | String.Contains($PARAM[content],directors.xml) | String.Contains($PARAM[content],special://videoplaylists/)] + String.IsEqual($PARAM[aspect],$LOCALIZE[31038])">
                 <include content="Widget_Posters_ItemLayout">
                     <param name="landscape" value="true" />
                 </include>
             </itemlayout>
-            <itemlayout width="widget_poster_width" height="widget_poster_height" condition="![[String.Contains($PARAM[content],tvGenres) | String.Contains($PARAM[content],movieGenres) | String.Contains($PARAM[content],genres.xml)] | String.Contains($PARAM[content],tvshows/genres) | String.Contains($PARAM[content],studios.xml) | String.Contains($PARAM[content],tvshows/studios) | String.Contains($PARAM[content],years.xml) | String.Contains($PARAM[content],country.xml) | String.Contains($PARAM[content],tags.xml) | String.Contains($PARAM[content],directors.xml) | String.Contains($PARAM[content],special://videoplaylists/)] + String.IsEqual($PARAM[aspect],$LOCALIZE[31263])">
+            <itemlayout width="widget_poster_width" height="widget_poster_height" condition="![[String.Contains($PARAM[content],tvGenres) | String.Contains($PARAM[content],movieGenres) | String.Contains($PARAM[content],genres.xml)] | String.Contains($PARAM[content],studios.xml) | String.Contains($PARAM[content],years.xml) | String.Contains($PARAM[content],country.xml) | String.Contains($PARAM[content],tags.xml) | String.Contains($PARAM[content],directors.xml) | String.Contains($PARAM[content],special://videoplaylists/)] + String.IsEqual($PARAM[aspect],$LOCALIZE[31263])">
                 <include content="Widget_Posters_ItemLayout">
                     <param name="square" value="true" />
                 </include>
             </itemlayout>
-            <itemlayout width="widget_poster_width" height="widget_poster_height" condition="![[String.Contains($PARAM[content],tvGenres) | String.Contains($PARAM[content],movieGenres) | String.Contains($PARAM[content],genres.xml)] | String.Contains($PARAM[content],tvshows/genres) | String.Contains($PARAM[content],studios.xml) | String.Contains($PARAM[content],tvshows/studios) | String.Contains($PARAM[content],years.xml) | String.Contains($PARAM[content],country.xml) | String.Contains($PARAM[content],tags.xml) | String.Contains($PARAM[content],directors.xml) | String.Contains($PARAM[content],special://videoplaylists/)] + String.IsEmpty($PARAM[aspect]) + !$PARAM[submenu]">
+            <itemlayout width="widget_poster_width" height="widget_poster_height" condition="![[String.Contains($PARAM[content],tvGenres) | String.Contains($PARAM[content],movieGenres) | String.Contains($PARAM[content],genres.xml)] | String.Contains($PARAM[content],studios.xml) | String.Contains($PARAM[content],years.xml) | String.Contains($PARAM[content],country.xml) | String.Contains($PARAM[content],tags.xml) | String.Contains($PARAM[content],directors.xml) | String.Contains($PARAM[content],special://videoplaylists/)] + String.IsEmpty($PARAM[aspect]) + !$PARAM[submenu]">
                 <include>Widget_Posters_ItemLayout</include>
             </itemlayout>
-            <itemlayout width="130" height="130" condition="![[String.Contains($PARAM[content],tvGenres) | String.Contains($PARAM[content],movieGenres) | String.Contains($PARAM[content],genres.xml)] | String.Contains($PARAM[content],tvshows/genres) | String.Contains($PARAM[content],studios.xml) | String.Contains($PARAM[content],tvshows/studios) | String.Contains($PARAM[content],years.xml) | String.Contains($PARAM[content],country.xml) | String.Contains($PARAM[content],tags.xml) | String.Contains($PARAM[content],directors.xml) | String.Contains($PARAM[content],special://videoplaylists/)] + String.IsEmpty($PARAM[aspect]) + $PARAM[submenu]">
+            <itemlayout width="130" height="130" condition="![[String.Contains($PARAM[content],tvGenres) | String.Contains($PARAM[content],movieGenres) | String.Contains($PARAM[content],genres.xml)] | String.Contains($PARAM[content],studios.xml) | String.Contains($PARAM[content],years.xml) | String.Contains($PARAM[content],country.xml) | String.Contains($PARAM[content],tags.xml) | String.Contains($PARAM[content],directors.xml) | String.Contains($PARAM[content],special://videoplaylists/)] + String.IsEmpty($PARAM[aspect]) + $PARAM[submenu]">
                 <include>Widget_Submenu_ItemLayout</include>
             </itemlayout>
             
-            <focusedlayout width="widget_poster_width" height="widget_poster_height" condition="[String.Contains($PARAM[content],tvGenres) | String.Contains($PARAM[content],movieGenres) | String.Contains($PARAM[content],genres.xml)] | String.Contains($PARAM[content],tvshows/genres)">
+            <focusedlayout width="widget_poster_width" height="widget_poster_height" condition="[String.Contains($PARAM[content],tvGenres) | String.Contains($PARAM[content],movieGenres) | String.Contains($PARAM[content],genres.xml)]">
                 <include content="Widget_Posters_FocusedLayout">
                     <param name="id" value="$PARAM[id]" />
                     <param name="genres" value="true" />
                 </include>
             </focusedlayout>
-            <focusedlayout width="widget_poster_width" height="widget_poster_height" condition="String.Contains($PARAM[content],studios.xml) | String.Contains($PARAM[content],tvshows/studios)">
+            <focusedlayout width="widget_poster_width" height="widget_poster_height" condition="String.Contains($PARAM[content],studios.xml)">
                 <include content="Widget_Posters_FocusedLayout">
                     <param name="id" value="$PARAM[id]" />
                     <param name="studios" value="true" />
@@ -605,30 +605,30 @@
                     <param name="text" value="true" />
                 </include>
             </focusedlayout>
-            <focusedlayout width="widget_poster_width" height="widget_poster_height" condition="![[String.Contains($PARAM[content],tvGenres) | String.Contains($PARAM[content],movieGenres) | String.Contains($PARAM[content],genres.xml)] | String.Contains($PARAM[content],tvshows/genres) | String.Contains($PARAM[content],studios.xml) | String.Contains($PARAM[content],tvshows/studios) | String.Contains($PARAM[content],years.xml) | String.Contains($PARAM[content],country.xml) | String.Contains($PARAM[content],tags.xml) | String.Contains($PARAM[content],directors.xml) | String.Contains($PARAM[content],special://videoplaylists/)] + String.IsEqual($PARAM[aspect],$LOCALIZE[20021])">
+            <focusedlayout width="widget_poster_width" height="widget_poster_height" condition="![[String.Contains($PARAM[content],tvGenres) | String.Contains($PARAM[content],movieGenres) | String.Contains($PARAM[content],genres.xml)] | String.Contains($PARAM[content],studios.xml) | String.Contains($PARAM[content],years.xml) | String.Contains($PARAM[content],country.xml) | String.Contains($PARAM[content],tags.xml) | String.Contains($PARAM[content],directors.xml) | String.Contains($PARAM[content],special://videoplaylists/)] + String.IsEqual($PARAM[aspect],$LOCALIZE[20021])">
                 <include content="Widget_Posters_FocusedLayout">
                     <param name="id" value="$PARAM[id]" />
                     <param name="poster" value="true" />
                 </include>
             </focusedlayout>
-            <focusedlayout width="606.67" height="widget_poster_height" condition="![[String.Contains($PARAM[content],tvGenres) | String.Contains($PARAM[content],movieGenres) | String.Contains($PARAM[content],genres.xml)] | String.Contains($PARAM[content],tvshows/genres) | String.Contains($PARAM[content],studios.xml) | String.Contains($PARAM[content],tvshows/studios) | String.Contains($PARAM[content],years.xml) | String.Contains($PARAM[content],country.xml) | String.Contains($PARAM[content],tags.xml) | String.Contains($PARAM[content],directors.xml) | String.Contains($PARAM[content],special://videoplaylists/)] + String.IsEqual($PARAM[aspect],$LOCALIZE[31038])">
+            <focusedlayout width="606.67" height="widget_poster_height" condition="![[String.Contains($PARAM[content],tvGenres) | String.Contains($PARAM[content],movieGenres) | String.Contains($PARAM[content],genres.xml)] | String.Contains($PARAM[content],studios.xml) | String.Contains($PARAM[content],years.xml) | String.Contains($PARAM[content],country.xml) | String.Contains($PARAM[content],tags.xml) | String.Contains($PARAM[content],directors.xml) | String.Contains($PARAM[content],special://videoplaylists/)] + String.IsEqual($PARAM[aspect],$LOCALIZE[31038])">
                 <include content="Widget_Posters_FocusedLayout">
                     <param name="id" value="$PARAM[id]" />
                     <param name="landscape" value="true" />
                 </include>
             </focusedlayout>
-            <focusedlayout width="widget_poster_width" height="widget_poster_height" condition="![[String.Contains($PARAM[content],tvGenres) | String.Contains($PARAM[content],movieGenres) | String.Contains($PARAM[content],genres.xml)] | String.Contains($PARAM[content],tvshows/genres) | String.Contains($PARAM[content],studios.xml) | String.Contains($PARAM[content],tvshows/studios) | String.Contains($PARAM[content],years.xml) | String.Contains($PARAM[content],country.xml) | String.Contains($PARAM[content],tags.xml) | String.Contains($PARAM[content],directors.xml) | String.Contains($PARAM[content],special://videoplaylists/)] + String.IsEqual($PARAM[aspect],$LOCALIZE[31263])">
+            <focusedlayout width="widget_poster_width" height="widget_poster_height" condition="![[String.Contains($PARAM[content],tvGenres) | String.Contains($PARAM[content],movieGenres) | String.Contains($PARAM[content],genres.xml)] | String.Contains($PARAM[content],studios.xml) | String.Contains($PARAM[content],years.xml) | String.Contains($PARAM[content],country.xml) | String.Contains($PARAM[content],tags.xml) | String.Contains($PARAM[content],directors.xml) | String.Contains($PARAM[content],special://videoplaylists/)] + String.IsEqual($PARAM[aspect],$LOCALIZE[31263])">
                 <include content="Widget_Posters_FocusedLayout">
                     <param name="id" value="$PARAM[id]" />
                     <param name="square" value="true" />
                 </include>
             </focusedlayout>
-            <focusedlayout width="widget_poster_width" height="widget_poster_height" condition="![[String.Contains($PARAM[content],tvGenres) | String.Contains($PARAM[content],movieGenres) | String.Contains($PARAM[content],genres.xml)] | String.Contains($PARAM[content],tvshows/genres) | String.Contains($PARAM[content],studios.xml) | String.Contains($PARAM[content],tvshows/studios) | String.Contains($PARAM[content],years.xml) | String.Contains($PARAM[content],country.xml) | String.Contains($PARAM[content],tags.xml) | String.Contains($PARAM[content],directors.xml) | String.Contains($PARAM[content],special://videoplaylists/)] + String.IsEmpty($PARAM[aspect]) + !$PARAM[submenu]">
+            <focusedlayout width="widget_poster_width" height="widget_poster_height" condition="![[String.Contains($PARAM[content],tvGenres) | String.Contains($PARAM[content],movieGenres) | String.Contains($PARAM[content],genres.xml)] | String.Contains($PARAM[content],studios.xml) | String.Contains($PARAM[content],years.xml) | String.Contains($PARAM[content],country.xml) | String.Contains($PARAM[content],tags.xml) | String.Contains($PARAM[content],directors.xml) | String.Contains($PARAM[content],special://videoplaylists/)] + String.IsEmpty($PARAM[aspect]) + !$PARAM[submenu]">
                 <include content="Widget_Posters_FocusedLayout">
                     <param name="id" value="$PARAM[id]" />
                 </include>
             </focusedlayout>
-            <focusedlayout width="130" height="130" condition="![[String.Contains($PARAM[content],tvGenres) | String.Contains($PARAM[content],movieGenres) | String.Contains($PARAM[content],genres.xml)] | String.Contains($PARAM[content],tvshows/genres) | String.Contains($PARAM[content],studios.xml) | String.Contains($PARAM[content],tvshows/studios) | String.Contains($PARAM[content],years.xml) | String.Contains($PARAM[content],country.xml) | String.Contains($PARAM[content],tags.xml) | String.Contains($PARAM[content],directors.xml) | String.Contains($PARAM[content],special://videoplaylists/)] + String.IsEmpty($PARAM[aspect]) + $PARAM[submenu]">
+            <focusedlayout width="130" height="130" condition="![[String.Contains($PARAM[content],tvGenres) | String.Contains($PARAM[content],movieGenres) | String.Contains($PARAM[content],genres.xml)] | String.Contains($PARAM[content],studios.xml) | String.Contains($PARAM[content],years.xml) | String.Contains($PARAM[content],country.xml) | String.Contains($PARAM[content],tags.xml) | String.Contains($PARAM[content],directors.xml) | String.Contains($PARAM[content],special://videoplaylists/)] + String.IsEmpty($PARAM[aspect]) + $PARAM[submenu]">
                 <include content="Widget_Submenu_FocusedLayout">
                     <param name="id" value="$PARAM[id]" />
                 </include>
