@@ -2,6 +2,7 @@
 Many optimisations of skin code
 Viewmode disabler
 Add option to disable text in wall views
+Fix flickering widget bug
 
 [B]0.9.5[/B]
 Close osd after subs download.
